[0.4.6] refactored ingredients and implemented a new affinity system. Added new textures, models, recipes, etc.